--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./back/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,12 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
-    "hpp": "^0.2.3"
+    "hpp": "^0.2.3",
+    "moment": "^2.29.1",
+    "mongoose": "^6.0.12"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15"
   }
 }
