--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@ckeditor/ckeditor5-build-balloon": "^31.0.0",
     "@ckeditor/ckeditor5-build-classic": "^31.0.0",
     "@ckeditor/ckeditor5-build-inline": "^31.0.0",
+    "@ckeditor/ckeditor5-code-block": "^31.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^26.0.1",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^26.0.1",
     "@ckeditor/ckeditor5-easy-image": "^31.0.0",
